--- a/_data/language.yml
+++ b/_data/language.yml
@@ -6,8 +6,8 @@
   str_email: "Email"
   str_tweet: "Tweetez"
   str_pin_it: "Pin it"
-  str_next_post: "Article suivant"
-  str_previous_post: "Article précèdent"
+  str_next_post: "Suivant"
+  str_previous_post: "Précèdent"
   str_next_page: "Suivant"
   str_previous_page: "Précèdent"
   str_continue_reading: "Lire la suite"
