--- a/_data/links.yml
+++ b/_data/links.yml
@@ -15,3 +15,10 @@
     guillaumedumas : https://www.linkedin.com/in/guillaume-dumas-1a812113/
     esia3d : https://www.bellecour.fr/
     emmanuelregis : https://www.linkedin.com/in/emmanuel-regis-0a58801/
+    maximemansion : https://www.linkedin.com/in/maxime-mansion-73162252/
+    antoineamblard : https://www.linkedin.com/in/antoine-amblard-57454040/
+    svenjacquet: https://www.linkedin.com/in/svenjacquet/
+    jeromehector : https://www.linkedin.com/in/jerome-hector-175a0245/
+    sebastienvallart : https://www.linkedin.com/in/sebastienvallart/
+    breakfirstgames : https://www.breakfirst.games/
+    majesco : https://www.majescoent.com/
